bat.string1.lessons.bat.string1.FrontTimes.scala.error
frontTimes:3: error: overloaded method value split with alternatives:
  (x$1: String)Array[String] <and>
  (x$1: String,x$2: Int)Array[String]
 cannot be applied to ()
  var letters = str.split();
                    ^